fixes #153 - header color, font-sizing and spacing

--- a/docs/theme/static/styles/_shared_layout.less
+++ b/docs/theme/static/styles/_shared_layout.less
@@ -315,7 +315,17 @@ body:not(.donejs) {
 			}
 		}
 		h4, h5, h6 {
-			color: #000000;
+			color: @logoColor;
+			margin-top: 2em;
+		}
+		h4 {
+			font-size: 25px;
+		}
+		h5 {
+			font-size: 20px;
+		}
+		h6 {
+			font-size: 18px;
 		}
 		h2 + * {
 			margin-top: @h2height + 180px!important; /* the px added here are the margin under the h2 */
